# movit_robot

arx5p2/urdf/: arx5p2.urdf
h1_inspire/launch/: display.launch
h1_inspire/urdf/: h1_inspire.urdf  h1_inspire_fixed_torso.urdf
wow_description/: CMakeLists.txt  package.xml
wow_description/launch/: display_baxter.launch  display_franka.launch  display_only_arm.launch  display_wow_large.launch  display_wow_little.launch
wow_description/robot/franka_description/robots/: panda_arm.urdf.xacro
wow_description/robot/only_arm/meshes/: base_link.STL  left_elbow_pitch_link.STL  left_shoulder_pitch_link.STL  left_shoulder_roll_link.STL  left_shoulder_yaw_link.STL  left_wrist_pitch_link.STL  left_wrist_yaw_link.STL
wow_description/robot/wow_large/meshes/: left_elbow_link.STL  left_shoulder_pitch_link.STL  left_shoulder_roll_link.STL  left_shoulder_yaw_link.STL  left_wrist_pitch_link.STL  left_wrist_roll_link.STL  left_wrist_yaw_link.STL  neck_pitch_link.STL  neck_yaw_link.STL  right_elbow_link.STL  right_shoulder_pitch_link.STL  right_shoulder_roll_link.STL  right_shoulder_yaw_link.STL  right_wrist_pitch_link.STL  right_wrist_roll_link.STL  right_wrist_yaw_link.STL  torso_link.STL
wow_description/robot/wow_large/urdf/: wow_body_wo_dummy.urdf  wow_large.urdf
wow_description/robot/wow_little/meshes/: left_1_link.STL  left_2_link.STL  left_3_link.STL  left_5_link.STL  left_6_link.STL  left_7_link.STL  left_8_link.STL  right_1_link.STL  right_2_link.STL  right_3_link.STL  right_5_link.STL  right_6_link.STL  right_7_link.STL  right_8_link.STL
wow_description/robot/wow_little/urdf/: wow_little_wo_dummy.urdf
wow_description/rviz/: robot.rviz
wow_motion_planning_package/: CMakeLists.txt  package.xml
wow_motion_planning_package/launch/: motion_planning_pipeline_tutorial.launch
wow_motion_planning_package/scripts/: bimanipulation.py  get_status.py  high_level.py  interface.py  motion_pipeline.py  motion_planning_python.py  new_interface.py  remote_control.py  remote_control_server.py  test.py  utils.py
wow_motion_planning_package/src/: CMakeLists.txt  combine_control_ik.cpp  get_joint_state.cpp  get_trajectory.cpp  left_control_ik.cpp  low_level.cpp  low_level_ik.cpp  low_level_new.cpp  low_level_no_info.cpp  motion_planning_pipeline_tutorial.cpp  path_planning.cpp  right_control_ik.cpp
wow_motion_planning_package/src/EtherCAT_Motor/: EtherCAT_Motor.c  EtherCAT_Motor.h  EtherCAT_Timer.c  EtherCAT_Timer.h
wow_moveit/: .setup_assistant  CMakeLists.txt  package.xml
wow_moveit/config/: fake_controllers.yaml  gazebo_up_body.urdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  up_body.srdf
wow_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
